RESOLVED FIXED12608
Incorrect min. width calculation of a series of floats with clear:both and white-space:nowrap
https://bugs.webkit.org/show_bug.cgi?id=12608
Summary Incorrect min. width calculation of a series of floats with clear:both and wh...
mitz
Reported 2007-02-05 02:53:16 PST
Reduction and patch forthcoming.
Attachments
Reduction (500 bytes, text/html)
2007-02-05 02:59 PST, mitz
no flags
Patch including change log and layout test (10.54 KB, patch)
2007-02-05 03:06 PST, mitz
no flags
Patch including change log and layout test (10.54 KB, patch)
2007-02-06 00:00 PST, mitz
mjs: review+
mitz
Comment 1 2007-02-05 02:59:03 PST
Created attachment 12930 [details] Reduction
mitz
Comment 2 2007-02-05 03:06:13 PST
Created attachment 12931 [details] Patch including change log and layout test No layout test regressions
mitz
Comment 3 2007-02-06 00:00:19 PST
Created attachment 12961 [details] Patch including change log and layout test Changed + if (!growForPrevious && (autoWrap || oldAutoWrap || clearPreviousFloat)) { to + if (!growForPrevious && (autoWrap || oldAutoWrap) || clearPreviousFloat) { since the crazy quirk does not apply here.
Maciej Stachowiak
Comment 4 2007-02-06 23:00:05 PST
Comment on attachment 12961 [details] Patch including change log and layout test r=me
Mark Rowe (bdash)
Comment 5 2007-02-07 21:22:56 PST
Landed in r19493.
Note You need to log in before you can comment on or make changes to this bug.