2007-02-07  Mitz Pettel  <mitz@webkit.org>

Reviewed by Maciej.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12608
          Incorrect min. width calculation of a series of floats with clear:both and white-space:nowrap

        Test: fast/block/float/nowrap-clear-min-width.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::calcInlineMinMaxWidth):

2007-02-07  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Maciej.

        - test for http://bugs.webkit.org/show_bug.cgi?id=12608
          Incorrect min. width calculation of a series of floats with clear:both and white-space:nowrap

        * fast/block/float/nowrap-clear-min-width-expected.checksum: Added.
        * fast/block/float/nowrap-clear-min-width-expected.png: Added.
        * fast/block/float/nowrap-clear-min-width-expected.txt: Added.
        * fast/block/float/nowrap-clear-min-width.html: Added.


Canonical link: https://commits.webkit.org/16387@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19493 268f45cc-cd09-0410-ab3c-d52691b4dbfc